Fixed stretched images

--- a/style.css
+++ b/style.css
@@ -174,17 +174,16 @@ body{
     display: flex;
     justify-content: center;
     gap: 6vh;
-    align-items: flex-start;
+    align-items: center;
+    height: 100%;
 }
 .ad-elon .content .elon {
-    height: 62vh;
-    width: 58%;
+    height: 75vh;
     border-radius: 16px;
 }
 
 .ad-elon .content .flower-lady {
-    height: 62vh;
-    width: 28%;
+    height: 75vh;
     border-radius: 16px;
 }
 
@@ -207,7 +206,50 @@ body{
     font-weight: 400;
     font-size: 3vh;
 }
+
 .ad-elon .footer .line2 {
     width: 74%;
 }
 
+.ad-samurai .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 10vh;
+    margin-top: 6vh;
+    padding-left: 10vh;
+    padding-right: 10vh;
+}
+
+.ad-samurai .header .title {
+    font-weight: 500;
+    font-size: 4vh;
+    border-bottom: 1px white solid;
+}
+
+.ad-samurai .header .subtitle {
+    color: grey;
+}
+
+.ad-samurai .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.ad-samurai .footer .line,.ad-samurai .footer .line2 {
+    border: 1px grey solid;
+}
+.ad-samurai .footer .line {
+    width: 9%;
+}
+
+.ad-samurai .footer .text {
+    margin-right: 5px;
+    font-weight: 400;
+    font-size: 3vh;
+}
+
+.ad-samurai .footer .line2 {
+    width: 74%;
+}
